--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -9,10 +9,11 @@
     <body>
         <nav class="navbar">
             <ol>
+                <li>Online-Lib</li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Signup</a></li>
-                <li><input type="text" name="search" placeholder="Search"><input type="button" class="Btn" value="Search"></li>
+                <li><input type="text" name="search" placeholder="Search"><input type="button" value="Search"></li>
             </ol>
         </nav>
     </body>
