added clear option

--- a/Onlinelib/templates/login.html
+++ b/Onlinelib/templates/login.html
@@ -8,6 +8,6 @@
     <body>
         <input type="text" placeholder="Username" name="username"><br><br>
         <input type="password" placeholder="password" name="password"><br><br>
-        <input type="submit" value="login">
+        <input type="submit" value="login"><input type="reset" value="Clear">
     </body>
 </html>
