created structure view

--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -17,7 +17,7 @@
         <a class="nav-link" href="#">Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Login</a>
+      <a class="nav-link" href="./login">Login</a>
     </li>
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
