--- a/Onlinelib/templates/signup.html
+++ b/Onlinelib/templates/signup.html
@@ -8,15 +8,14 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
-    <title>Login Page</title>
+    <title>Sign up</title>
   </head>
   <body>
         <form method="POST">
           {% csrf_token %}
-            <input type="text" placeholder="Username" name="username"><br><br>
-            <input type="password" placeholder="Password" name="password"><br><br>
-            <input type="submit" value="Login">
-            <p>If you don't have any accout then <a href ="./signup">Click here</a></p>
+            <input type="text" placeholder="Username" name="username" required><br><br>
+            <input type="password" placeholder="Password" name="password" required><br><br>
+            <input type="submit" value="Create Account">
         </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
