--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -7,12 +8,16 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="{% static 'index.css' %}">
     <title>Homepage</title>
   </head>
   <body>
 <!--Navigation bar-->
-<ul class="nav nav-pills">
+<header>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" id="logo" href="#">Online-Library</a>
+    </li>  
     <li class="nav-item">
         <a class="nav-link" href="#">Home</a>
     </li>
@@ -28,10 +33,10 @@
         </ul>
       </li>
 </ul>
+</header>
+
 <!--page containt-->
-<div class="img-src">
-    <img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, ipsum iusto.<br>
-    Similique ut itaque modi earum nobis. Sint, consequuntur. Sapiente eos et aspernatur! Quod, rem? <br>hellghbmsdmmsdhmhvs dhhmfhsdmfgs bmhsdbhmsfvgsydg   dmbfsdg
+    <img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275">
 </div>
 <!--Lorem-->
 
