--- a/Onlinelib/static/index.css
+++ b/Onlinelib/static/index.css
@@ -1,10 +1,17 @@
+body
+{
+    background-color: #ffefb4;
+}
+
+
 header
 {
     margin-top: 2.5px;
-    background-color:ghostwhite;
+    background-color:#6F69AC;
     border-style:none;
     border-radius:12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color:white;
 }
 #logo
 {
@@ -22,7 +29,17 @@ header ul li
 {
     padding:12px;
 }
-
+header ul li a.nav-link
+{
+    color:white;
+}
+.containt p
+{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-weight:bold;
+    text-align:right;
+    vertical-align:top;
+}
 /* If you want hover effect */
 /*header ul li a.nav-link:hover
 {
