--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -39,6 +39,12 @@
     <img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275">
 </div>
 <!--Lorem-->
+<div class ="containt">
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi<br> sapiente tenetur assumenda vitae voluptatibus corporis!
+    Eligendi cumque labore aperiam?
+  </p>
+</div>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
