--- a/Onlinelib/templates/signup.html
+++ b/Onlinelib/templates/signup.html
@@ -19,7 +19,7 @@
             <input type="number" placeholder="Contact Number" name="phone"><br><br>
             <input type="address" placeholder="Address" name="address"><br><br>
             <input type="password" placeholder="Password" name="password" required><br><br>
-            <input type="submit" value="Create Account">
+            <input type="submit" value="Create Account" class="btn btn-primary">
         </form>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
