--- a/Onlinelib/templates/login.html
+++ b/Onlinelib/templates/login.html
@@ -15,7 +15,7 @@
           {% csrf_token %}
             <input type="text" placeholder="Username" name="username"><br><br>
             <input type="password" placeholder="Password" name="password"><br><br>
-            <input type="submit" value="Login">
+            <input type="submit" value="Login" class="btn btn-primary">
             <p>If you don't have any accout then <a href ="./signup">Click here</a></p>
         </form>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
