--- a/Onlinelib/templates/signup.html
+++ b/Onlinelib/templates/signup.html
@@ -17,6 +17,7 @@
             <input type="text" placeholder="Username" name="username" required><br><br>
             <input type="email" placeholder="Email" name="email" required><br><br>
             <input type="number" placeholder="Contact Number" name="phone"><br><br>
+            <input type="date" name="date"><br><br>
             <input type="address" placeholder="Address" name="address"><br><br>
             <input type="password" placeholder="Password" name="password" required><br><br>
             <input type="submit" value="Create Account" class="btn btn-primary">
