--- a/Onlinelib/templates/login.html
+++ b/Onlinelib/templates/login.html
@@ -20,7 +20,7 @@
     <a class="nav-link" id="logo" href="#">Online-Library</a>
   </li>  
   <li class="nav-item">
-      <a class="nav-link" href="#">Home</a>
+      <a class="nav-link" href="./index">Home</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" href="./signup">Signup</a>
