--- a/Onlinelib/templates/signup.html
+++ b/Onlinelib/templates/signup.html
@@ -1,4 +1,5 @@
 <!doctype html>
+{% load static %}
 <html lang="en">
   <head>
     <!-- Required meta tags -->
@@ -7,21 +8,45 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'sign.css'%}">
 
     <title>Sign up</title>
   </head>
   <body>
+<header>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" id="logo" href="#">Online-Library</a>
+    </li>  
+    <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="./login">Login</a>
+    </li>
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item" href="#">Git-Hub</a></li>
+          <li><a class="dropdown-item" href="#">Linkdin</a></li>
+          <li><a class="dropdown-item" href="#">Instagram</a></li>
+        </ul>
+      </li>
+</ul>
+</header>
+<center>
+  <form method="POST">
+    {% csrf_token %}
+      <input type="text" placeholder="Username" name="username" required><br><br>
+      <input type="email" placeholder="Email" name="email" required><br><br>
+      <input type="number" placeholder="Contact Number" name="phone"><br><br>
+      <input type="date" name="date"><br><br>
+      <input type="address" placeholder="Address" name="address"><br><br>
+      <input type="password" placeholder="Password" name="password" required><br><br>
+      <input type="submit" value="Create Account" class="btn btn-primary">
+</form>
+</center>
 
-        <form method="POST">
-          {% csrf_token %}
-            <input type="text" placeholder="Username" name="username" required><br><br>
-            <input type="email" placeholder="Email" name="email" required><br><br>
-            <input type="number" placeholder="Contact Number" name="phone"><br><br>
-            <input type="date" name="date"><br><br>
-            <input type="address" placeholder="Address" name="address"><br><br>
-            <input type="password" placeholder="Password" name="password" required><br><br>
-            <input type="submit" value="Create Account" class="btn btn-primary">
-        </form>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
