--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -27,25 +27,28 @@
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Git-Hub</a></li>
+          <li><a class="dropdown-item" href="https://github.com/kunalavghade/">Git-Hub</a></li>
           <li><a class="dropdown-item" href="#">Linkdin</a></li>
-          <li><a class="dropdown-item" href="#">Instagram</a></li>
+          <li><a class="dropdown-item" href="https://www.instagram.com/kunalavghade/">Instagram</a></li>
         </ul>
       </li>
 </ul>
 </header>
-
-<!--page containt-->
-    <img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275">
-</div>
-<!--Lorem-->
-<div class ="containt">
-  <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste eligendi<br> sapiente tenetur assumenda vitae voluptatibus corporis!
-    Eligendi cumque labore aperiam?
-  </p>
-</div>
-
+<!-- Table base trial-->
+<center>
+<br>  
+<table>
+  <tr>
+    <td><img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275"></td>
+    <td>
+      <q>If you only read the books that everyone else is reading, you can only think what everyone else is thinking.
+      ― Haruki Murakami</q>
+      <p>Here we are for you provide books of Engineering and Graduation Books  </p>
+      <br>
+    </td>
+  </tr>
+</table>
+</center>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
