added search button

--- a/Onlinelib/templates/main.html
+++ b/Onlinelib/templates/main.html
@@ -24,6 +24,9 @@
           <li class="nav-item">
             <a class="nav-link" href="./login">Logout</a>
           </li>
+          <li class="nav-item">
+            <input type="text" placeholder="Serach Here"><input type="button" value="Search"> 
+          </li>
           <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
               <ul class="dropdown-menu">
