--- a/Onlinelib/static/index.css
+++ b/Onlinelib/static/index.css
@@ -9,7 +9,8 @@ header
     margin-top: 2.5px;
     background-color:#6F69AC;
     border-style:none;
-    border-radius:12px;
+    border-bottom-right-radius:12px;
+    border-bottom-left-radius: 12px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     color:white;
 }
