--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'index.css' %}">
     <title>Homepage</title>
   </head>
-  <body>
+  <body background="https://source.unsplash.com/weekly?books">
 <!--Navigation bar-->
 <header>
   <ul class="nav nav-pills">
@@ -34,23 +34,16 @@
       </li>
 </ul>
 </header>
-<!-- Table base trial-->
-<center>
-<br>  
-<table>
-  <tr>
-    <td><img src="https://source.unsplash.com/weekly?book" alt="any book image" width="350" height="275"></td>
-    <td>
-      <q>If you only read the books that everyone else is reading, you can only think what everyone else is thinking.
+  <center>
+    <div class="text">
+    <q>If you only read the books that everyone else is reading, you can only think what everyone else is thinking.
       ― Haruki Murakami</q>
       <p>Here we are for you provide books of Engineering and Graduation Books  </p>
-      <br>
-    </td>
-  </tr>
-</table>
-</center>
+  </div>
+  </center>
+ 
 
-    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <!--Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
   </body>
 </html>
