--- a/Onlinelib/templates/login.html
+++ b/Onlinelib/templates/login.html
@@ -13,7 +13,7 @@
 
     <title>Login Page</title>
   </head>
-  <body>
+  <body background="https://source.unsplash.com/weekly?books">
 <header> 
    <ul class="nav nav-pills">
   <li class="nav-item">
@@ -28,9 +28,9 @@
   <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Git-Hub</a></li>
+        <li><a class="dropdown-item" href="https://github.com/kunalavghade/">Git-Hub</a></li>
         <li><a class="dropdown-item" href="#">Linkdin</a></li>
-        <li><a class="dropdown-item" href="#">Instagram</a></li>
+        <li><a class="dropdown-item" href="https://www.instagram.com/kunalavghade/">Instagram</a></li>
       </ul>
     </li>
 </ul>
