--- a/Onlinelib/templates/index.html
+++ b/Onlinelib/templates/index.html
@@ -28,7 +28,7 @@
         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">About Us</a>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item" href="https://github.com/kunalavghade/">Git-Hub</a></li>
-          <li><a class="dropdown-item" href="#">Linkdin</a></li>
+          <li><a class="dropdown-item" href="https://www.linkedin.com/in/shubham-kite-958aa51b4">Linkdin</a></li>
           <li><a class="dropdown-item" href="https://www.instagram.com/kunalavghade/">Instagram</a></li>
         </ul>
       </li>
