--- a/Onlinelib/templates/contactus.html
+++ b/Onlinelib/templates/contactus.html
@@ -23,7 +23,7 @@
 <body>
     <!-------------------------------------Navigation Bar------------------------------------>
     <div class="topnav" id="myTopnav">
-        <i><a href=".">iMarts</a></i>
+        <i><a href=".">Online-Lib</a></i>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i></a>
         <a href="." class="active">Home</a>
