--- a/Onlinelib/templates/home.html
+++ b/Onlinelib/templates/home.html
@@ -10,7 +10,7 @@
         
         <!-------------------------------------Navigation Bar------------------------------------>
         <div class="topnav" id="myTopnav">
-            <i><a href="#">iMarts</a></i>
+            <i><a href="#">Online-Lib</a></i>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i></a>
             <a href="#home" class="active">Home</a>
