--- a/Onlinelib/templates/home.html
+++ b/Onlinelib/templates/home.html
@@ -13,7 +13,7 @@
             <i><a href="#">Online-Lib</a></i>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
             <i class="fa fa-bars"></i></a>
-            <a href="#home" class="active">Home</a>
+            <a href="main" class="active">Home</a>
             <a href="/login">Login</a>
             <a href="contactus">Contact</a>
             <a href="about">About</a>
@@ -22,7 +22,7 @@
             <div class="greeting">
                 <h3>Accelerating research discovery to shape a better future </h3>
                 <h2>Today's research, tomorrow's innovation</h2>
-                <button type="submit">Access content here</button>
+                <button type="submit"  onclick="location.href='main'">Access content here</button>
             </div>
             <hr>
             <div class="section">
